--- a/packages/extension/src/viewer.html
+++ b/packages/extension/src/viewer.html
@@ -191,6 +191,14 @@
         <span class="trust-label" id="trustLabel">Verifying Content</span>
         <span class="trust-details" id="trustDetails">Checking integrity...</span>
       </div>
+      <button class="reverify-btn" id="reverifyBtn" onclick="reverifyContent()" title="Reverify content integrity">
+        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+          <polyline points="23 4 23 10 17 10"></polyline>
+          <polyline points="1 20 1 14 7 14"></polyline>
+          <path d="M3.51 9a9 9 0 0 1 14.85-3.36L23 10M1 14l4.64 4.36A9 9 0 0 0 20.49 15"></path>
+        </svg>
+        <span>Reverify</span>
+      </button>
     </div>
 
     <!-- Progress Bar -->
