fix: viewer page share link

--- a/packages/extension/src/viewer.html
+++ b/packages/extension/src/viewer.html
@@ -191,6 +191,15 @@
         <span class="trust-label" id="trustLabel">Verifying Content</span>
         <span class="trust-details" id="trustDetails">Checking integrity...</span>
       </div>
+      <button class="share-btn" id="shareBtn" title="Share gateway URL">
+        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+          <circle cx="18" cy="5" r="3"></circle>
+          <circle cx="6" cy="12" r="3"></circle>
+          <circle cx="18" cy="19" r="3"></circle>
+          <line x1="8.59" y1="13.51" x2="15.42" y2="17.49"></line>
+          <line x1="15.41" y1="6.51" x2="8.59" y2="10.49"></line>
+        </svg>
+      </button>
       <button class="reverify-btn" id="reverifyBtn" title="Reverify content integrity">
         <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
           <polyline points="23 4 23 10 17 10"></polyline>
@@ -230,6 +239,10 @@
           </div>
         </div>
         <p class="loading-text" id="loadingText">Verifying content integrity...</p>
+        <div class="skip-verification" id="skipVerification">
+          <div class="skip-text">Taking too long?</div>
+          <button id="skipVerificationBtn">Skip Verification</button>
+        </div>
       </div>
     </div>
     
